hphp/test/zend/good/ext/posix/tests/posix_ctermid.php.skipif
<?php 
	if (!extension_loaded('posix')) { 
        die('SKIP - POSIX extension not available');
    }
    // needed because of #ifdef HAVE_CTERMID in posix.c
    if (!function_exists('posix_ctermid')) { 
        die('SKIP - Function posix_ctermid() not available');
    }
?>