hphp/test/zend/bad/ext/sockets/tests/socket_import_stream-3.php.skipif
<?php
if (!extension_loaded('sockets')) {
	die('SKIP sockets extension not available.');
}
$s = socket_create(AF_INET, SOCK_DGRAM, SOL_UDP);
$br = socket_bind($s, '0.0.0.0', 58381);
if ($br === false)
	die("SKIP IPv4/port 58381 not available");
$so = socket_set_option($s, IPPROTO_IP, MCAST_JOIN_GROUP, array(
	"group"	=> '224.0.0.23',
	"interface" => "lo",
));
if ($so === false)
	die("SKIP joining group 224.0.0.23 on interface lo failed");